# TinyTIFF

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  appveyor.yml  classes.html  dir_36f15a76b34aab76fd15ad9ec0b06ea0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_vars.html  group__tinytiff__maingroup.html  group__tinytiff__maingroup.js  group__tinytiffreader.html  group__tinytiffreader.js  group__tinytiffreader___c.html  group__tinytiffreader___c.js  group__tinytiffreader___c_x_x.html  group__tinytiffreader___c_x_x.js  group__tinytiffreader__internal.html  group__tinytiffwriter.html  group__tinytiffwriter.js  group__tinytiffwriter___c.html  group__tinytiffwriter___c.js  group__tinytiffwriter___c_x_x.html  group__tinytiffwriter___c_x_x.js  group__tinytiffwriter__internal.html  group__tinytiffwriter__internal.js  index.html  index.js  libtiff_tools.cpp  libtiff_tools.h  licensepage.html  menudata.js  modules.html  modules.js  (+44 more)
.github/workflows/: build_docs.yml  build_linux.yml  build_msvc.yml  build_windows.yml  msvc-codeanalysis.yml
ci/: install_travis.sh  test_travis.sh  travis_build.sh  travis_builddocumentation.sh  travis_installdoxygen.sh  travis_test.sh
cmake/: tinytiff_build_type.cmake
doc/: Doxyfile
doc/dox/: buildinstructions.dox  license.dox  mainpage.dox  useinstructions.dox
doc/images/: performance_measure.ods  performance_measure_ssd.ods
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  groups_6.js  groups_7.js  groups_8.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_7.js  (+11 more)
src/: CMakeLists.txt  tiff_definitions_internal.h  tinytiff_ctools_internal.c  tinytiff_ctools_internal.h  tinytiff_defs.h  tinytiff_tools.hxx  tinytiff_version.h.in  tinytiffreader.c  tinytiffreader.cpp  tinytiffreader.h  tinytiffreader.hxx  tinytiffwriter.c  tinytiffwriter.cpp  tinytiffwriter.h
test/tinytiff_reader_test/: Makefile  Makefile_nolibtiff  cell.tif  galaxy_nocompression.tif  main.cpp  mri.tif  tinytiffreader_test.cbp
test/tinytiffwriter_test/: Makefile  main.cpp  tinytiffwriter_test.cbp
tests/: CMakeLists.txt
tests/common_tinytiff_test_lib/: CMakeLists.txt  libtiff_tools.cpp  libtiff_tools.h  test_results.cpp  test_results.h  testimage_tools.cpp  testimage_tools.h  tinytiffhighrestimer.cpp  tinytiffhighrestimer.h
tests/extcmake_fetchcontent_tinytiff_test/: CMakeLists.txt  extcmake_fetchcontent_tinytiff_test.cpp
tests/extcmake_tinytiff_test/: CMakeLists.txt  extcmake_tinytiff_test.cpp
tests/tinytiffreader_test/: CMakeLists.txt  circuit_nocompression.tif  corel_photopaint_grey.tif  corel_photopaint_grey16.tif  corel_photopaint_greyalpha.tif  corel_photopaint_rgb.tif  corel_photopaint_rgb48.tif  corel_photopaint_rgba.tif  galaxy_nocompression.tif  gh19-id8.tif  imagej_32bit_ramp.tif  imagej_32bit_ramp_tiled.tif  mri_nocompression.tif  multi-channel-time-series.ome.tif  tinytiffreader_test.cpp
tests/tinytiffwriter_speedtest/: CMakeLists.txt  tinytiffwriter_speedtest.cpp
tests/tinytiffwriter_test/: CMakeLists.txt  tinytiffwriter_test.cpp
